update scss files structure

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </ul>
                 </nav>
                 <div class="buttons-block">
-                    <a href="pages/contact.html" class="btn contact-btn">Get in touch</a>
+                    <a href="pages/contact.html" class="btn contact-btn white-btn">Get in touch</a>
                     <button class="hamburger hamburger--squeeze btn" type="button">
                         <span class="hamburger-box">
                             <span class="hamburger-inner"></span>
@@ -67,7 +67,7 @@
                     <div class="text-content">
                         <h1>Ready to take your <span class="green">Business Growth</span> to the next level?</h1>
                         <p>Transforming ideas into stunning, user-friendly websites — our web design agency brings your digital vision to life! Creative and effective web design for your brand!</p>
-                        <a href="pages/portfolio.html" class="btn go-btn"><span class="btn-arrow"></span>View our works</a>
+                        <a href="pages/portfolio.html" class="btn go-btn white-btn"><span class="btn-arrow"></span>View our works</a>
                         <div class="partners">
                             <h4 class="green">Trusted by Leading Brands</h4>
                             <ul class="partners-list">
@@ -202,7 +202,7 @@
                                 Revenue generated
                             </div>
                         </div>
-                        <a href="pages/about.html" class="btn go-btn"><span class="btn-arrow"></span>More about us</a>
+                        <a href="pages/about.html" class="btn go-btn white-btn"><span class="btn-arrow"></span>More about us</a>
                     </div>
                 </div>
             </section>
@@ -286,7 +286,7 @@
                             </div>
                         </div>
                         <div class="side right">
-                            <a href="pages/portfolio.html" class="btn go-btn"><span class="btn-arrow"></span>More projects</a>
+                            <a href="pages/portfolio.html" class="btn go-btn black-btn"><span class="btn-arrow"></span>More projects</a>
                             <div class="project">
                                 <a href="pages/portfolio/orange-moon.html">
                                     <div class="image-box">
