finish first block with gallery

--- a/pages/about.html
+++ b/pages/about.html
@@ -52,7 +52,7 @@
                     </ul>
                 </nav>
                 <div class="buttons-block">
-                    <a href="contact.html" class="btn contact-btn">Get in touch</a>
+                    <a href="contact.html" class="btn contact-btn black-btn">Get in touch</a>
                     <button class="hamburger hamburger--squeeze btn" type="button">
                         <span class="hamburger-box">
                             <span class="hamburger-inner"></span>
@@ -66,11 +66,26 @@
                 <div class="container">
                     <div class="text-content">
                         <p>Pleasure and so read the was hope.</p>
-                        <h1>Ready to take your <span class="green">your business</span> to the next level?</h1>
+                        <h1>Ready to take <span class="green">your business</span> to the next level?</h1>
                         <p>Transforming ideas into stunning, user-friendly websites — our web design agency brings your digital vision to life! Creative and effective web design for your brand!</p>
                         <div class="rate">
                             <div class="image-box">
                                 <img src="../assets/img/about/review-author.png" alt="John Doe">
+                            </div>
+                            <div>Rated 4.9/5 stars
+                                <div class="stars">
+                                    <svg>
+                                        <use xlink:href="../assets/img/index/sprite.svg#star" />
+                                    </svg><svg>
+                                        <use xlink:href="../assets/img/index/sprite.svg#star" />
+                                    </svg><svg>
+                                        <use xlink:href="../assets/img/index/sprite.svg#star" />
+                                    </svg><svg>
+                                        <use xlink:href="../assets/img/index/sprite.svg#star" />
+                                    </svg><svg>
+                                        <use xlink:href="../assets/img/index/sprite.svg#star" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -79,15 +94,15 @@
                             <img src="../assets/img/about/photo-4.jpg" alt="Photo of big team at work">
                         </div>
                         <div class="photo-2 photo image-box">
-                            <img src="../assets/img/index/gallery-2.jpg" alt="Photo of big team at work">
+                            <img src="../assets/img/about/photo-5.jpg" alt="Photo of big team at work">
                         </div>
                         <div class="photo-3 photo image-box">
-                            <img src="../assets/img/index/gallery-3.jpg" alt="Photo of big team at work">
+                            <img src="../assets/img/about/photo-6.jpg" alt="Photo of big team at work">
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="services">
+            <section class="statistics">
                 <div class="container">
                     <ul class="statistics-list">
                         <li>
@@ -253,7 +268,7 @@
             </div>
         </footer>
     </div>
-    <script src="../assets/js/gallery.js"></script>
+    <!-- <script src="../assets/js/gallery.js"></script> -->
     <script src="../assets/js/harmburger.js"></script>
     <script src="../assets/js/placeholder.js"></script>
 </body>
