finish first block with gallery

--- a/pages/about.html
+++ b/pages/about.html
@@ -268,7 +268,7 @@
             </div>
         </footer>
     </div>
-    <!-- <script src="../assets/js/gallery.js"></script> -->
+    <script src="../assets/js/gallery.js"></script>
     <script src="../assets/js/harmburger.js"></script>
     <script src="../assets/js/placeholder.js"></script>
 </body>
