finish mission block

--- a/pages/about.html
+++ b/pages/about.html
@@ -106,23 +106,24 @@
                 <div class="container">
                     <ul class="statistics-list">
                         <li>
-                            <div>200+</div>
+                            <div class="stats">200+</div>
                             <h3>We’re a family</h3>
                             <p>Speedily say has suitable disposal add boy. On fourth doubt miles of child. Exercise joy man children rejoiced.</p>
                         </li>
                         <li>
-                            <div>99%</div>
+                            <div class="stats">99%</div>
                             <h3>Graphic Design</h3>
                             <p>Perceived end knowledge certainly day sweetness why cordially. Ask a quick six seven offer see among.</p>
                         </li>
                         <li>
-                            <div>1.5M+</div>
+                            <div class="stats">1.5M+</div>
                             <h3>Digital Marketing</h3>
                             <p>Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh.</p>
                         </li>
+                    </ul>
                 </div>
             </section>
-            <section class="our-mission">
+            <section class="mission">
                 <div class="container">
                     <div class="text-content">
                         <hgroup>
@@ -130,12 +131,12 @@
                             <p>Boost your with your business.</p>
                         </hgroup>
                         <p>He moonlights difficult engrossed it, sportsmen. Interested has all Devonshire difficulty gay assistance joy.</p>
-                        <ul>
-                            <li>Moonlight newspaper up its enjoyment</li>
+                        <ul class="missions-list">
+                            <li>Moonlight newspaper up its enjoyment.</li>
                             <li>She new course gets living.</li>
                             <li>Rooms oh fully taken by worse.</li>
-                            <li>She new course gets living.</li>
                             <li>Perceived end certainly day.</li>
+                            <li>She new course gets living.</li>
                             <li>Preference any astonished unreserved Mrs.</li>
                         </ul>
                     </div>
@@ -144,17 +145,17 @@
                             <img src="../assets/img/about/mission-photo-1.jpg" alt="Team at work">
                         </div>
                         <div class="stats">
-                            <div>
-                                <div>10k</div>
+                            <div class="left">
+                                <div class="number">10k</div>
                                 <div>Great conversations per month</div>
                             </div>
-                            <div>
-                                <div>95+</div>
+                            <div class="right">
+                                <div class="number">95+</div>
                                 <div>Project Complete</div>
                             </div>
                         </div>
                     </div>
-                    <div class="image-box">
+                    <div class="partners-image-box">
                         <img src="../assets/img/about/mission-photo-2.jpg" alt="Business partners">
                     </div>
             </section>
@@ -206,7 +207,7 @@
             <div class="container">
                 <div class="block block-top">
                     <div class="about">
-                        <img src="assets/img/canvix-footer-logo.svg" alt="Canvix logo">
+                        <img src="../assets/img/canvix-footer-logo.svg" alt="Canvix logo">
                         <p>We’re a team of strategic creator and digital innovator, united focus in our pursuit of mastery and joyful.</p>
                     </div>
                     <div class="pages">
