finish team section

--- a/pages/about.html
+++ b/pages/about.html
@@ -158,6 +158,7 @@
                     <div class="partners-image-box">
                         <img src="../assets/img/about/mission-photo-2.jpg" alt="Business partners">
                     </div>
+                </div>
             </section>
             <section class="our-team">
                 <div class="container">
@@ -168,21 +169,21 @@
                                 <li>
                                     <a href="https://www.facebook.com/" target="_blank" rel="nofollow noreferrer" title="Link to Facebook">
                                         <svg>
-                                            <use xlink:href="assets/img/index/sprite.svg#fb" />
+                                            <use xlink:href="../assets/img/index/sprite.svg#fb" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://www.instagram.com/" target="_blank" rel="nofollow noreferrer" title="Link to Instagram">
                                         <svg>
-                                            <use xlink:href="assets/img/index/sprite.svg#inst" />
+                                            <use xlink:href="../assets/img/index/sprite.svg#inst" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://www.linkedin.com/" target="_blank" rel="nofollow noreferrer" title="Link to LinkedIn">
                                         <svg>
-                                            <use xlink:href="assets/img/index/sprite.svg#linkedin" />
+                                            <use xlink:href="../assets/img/index/sprite.svg#linkedin" />
                                         </svg>
                                     </a>
                                 </li>
@@ -192,6 +193,66 @@
                             </div>
                             <div>Esther Howards</div>
                             <div>Founder & CEO</div>
+                        </div>
+                        <div class="member">
+                            <ul class="socials-list">
+                                <li>
+                                    <a href="https://www.facebook.com/" target="_blank" rel="nofollow noreferrer" title="Link to Facebook">
+                                        <svg>
+                                            <use xlink:href="../assets/img/index/sprite.svg#fb" />
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/" target="_blank" rel="nofollow noreferrer" title="Link to Instagram">
+                                        <svg>
+                                            <use xlink:href="../assets/img/index/sprite.svg#inst" />
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/" target="_blank" rel="nofollow noreferrer" title="Link to LinkedIn">
+                                        <svg>
+                                            <use xlink:href="../assets/img/index/sprite.svg#linkedin" />
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                            <div class="image-box">
+                                <img src="../assets/img/about/team-2.jpg" alt="Marketing Head Cameron Williamson">
+                            </div>
+                            <div>Cameron Williamson</div>
+                            <div>Marketing Head</div>
+                        </div>
+                        <div class="member">
+                            <ul class="socials-list">
+                                <li>
+                                    <a href="https://www.facebook.com/" target="_blank" rel="nofollow noreferrer" title="Link to Facebook">
+                                        <svg>
+                                            <use xlink:href="../assets/img/index/sprite.svg#fb" />
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/" target="_blank" rel="nofollow noreferrer" title="Link to Instagram">
+                                        <svg>
+                                            <use xlink:href="../assets/img/index/sprite.svg#inst" />
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/" target="_blank" rel="nofollow noreferrer" title="Link to LinkedIn">
+                                        <svg>
+                                            <use xlink:href="../assets/img/index/sprite.svg#linkedin" />
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                            <div class="image-box">
+                                <img src="../assets/img/about/team-3.jpg" alt="Founder & CEO Esther Howards">
+                            </div>
+                            <div>Liam Cooper</div>
+                            <div>Marketing Head</div>
                         </div>
                     </div>
                 </div>
