finish about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -260,7 +260,9 @@
             <section class="contacts">
                 <div class="container">
                     <p>Enough talk, let’s get to work</p>
-                    <a href="contact.html"></a>
+                    <div class="button-block">
+                        <a href="contact.html" class="btn contact-btn white-btn">Get in touch</a>
+                    </div>
                 </div>
             </section>
         </main>
