finish about page responsive

--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,7 @@
                 </nav>
                 <div class="buttons-block">
                     <a href="contact.html" class="btn contact-btn black-btn">Get in touch</a>
-                    <button class="hamburger hamburger--squeeze btn" type="button">
+                    <button class="hamburger hamburger--squeeze btn black-burger" type="button">
                         <span class="hamburger-box">
                             <span class="hamburger-inner"></span>
                         </span>
