--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvix</title>
     <link type="text/css" rel="stylesheet" href="assets/plugins/lightslider/css/lightslider.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
     <link rel="icon" type="image/png" href="assets/favicon/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/svg+xml" href="assets/favicon/favicon.svg">
     <link rel="shortcut icon" href="assets/favicon/favicon.ico">
