--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
     <link type="text/css" rel="stylesheet" href="../assets/plugins/lightslider/css/lightslider.css">
-    <link rel="stylesheet" href="../assets/css/about.css">
+    <link rel="stylesheet" href="../assets/css/about.min.css">
     <link rel="icon" type="image/png" href="../assets/favicon/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/svg+xml" href="../assets/favicon/favicon.svg">
     <link rel="shortcut icon" href="../assets/favicon/favicon.ico">
