contacts page draft markup

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
     <link type="text/css" rel="stylesheet" href="../assets/plugins/lightslider/css/lightslider.css">
-    <link rel="stylesheet" href="../assets/css/about.css">
+    <link rel="stylesheet" href="../assets/css/contact.min.css">
     <link rel="icon" type="image/png" href="../assets/favicon/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/svg+xml" href="../assets/favicon/favicon.svg">
     <link rel="shortcut icon" href="../assets/favicon/favicon.ico">
@@ -62,10 +62,52 @@
             </div>
         </header>
         <main>
-            <section class="first">
+            <section class="form">
                 <div class="container">
-
+                    <div class="text-content">
+                        <h1>Let’s talk</h1>
+                        <p>We collaborate with thousands of creators, entrepreneurs and complete legends.</p>
+                        <ul class="contacts-list">
+                            <li>
+                                <svg>
+                                    <use xlink:href="../assets/img/index/sprite.svg#letter-s" />
+                                </svg>
+                                <h3>Our email</h3>
+                                <a href="mailto:hello@example.com">hello@example.com</a>
+                            </li>
+                            <li>
+                                <svg>
+                                    <use xlink:href="../assets/img/index/sprite.svg#letter-s" />
+                                </svg>
+                                <h3>Call us</h3>
+                                <a href="tel:+10124574578">+101 245 74578</a>
+                            </li>
+                            <li>
+                                <svg>
+                                    <use xlink:href="../assets/img/index/sprite.svg#phone" />
+                                </svg>
+                                <h3>Find us</h3>
+                                <a href="https://www.google.com/maps/place/Tanglewood+Dr,+Biloxi,+MS+39531,+%D0%A1%D0%A8%D0%90/@30.4063731,-88.9649799,120m/data=!3m1!1e3!4m15!1m8!3m7!1s0x889c11be7eaff1d9:0xb9e2bb3ec993ee06!2zVGFuZ2xld29vZCBEciwgQmlsb3hpLCBNUyAzOTUzMSwg0KHQqNCQ!3b1!8m2!3d30.4064886!4d-88.965084!16s%2Fg%2F1t_wq3wd!3m5!1s0x889c11be7eaff1d9:0xb9e2bb3ec993ee06!8m2!3d30.4064886!4d-88.965084!16s%2Fg%2F1t_wq3wd" target="_blank" rel="nofollow noreferrer" title="Link to Google Maps">Open Google Maps</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <form action="#" method="post">
+                        <label for="name">First name</label>
+                        <input type="text" id="name" name="name" required>
+                        <label for="last-name">Last name</label>
+                        <input type="text" id="last-name" name="last-name" required>
+                        <label for="email-full">Email</label>
+                        <input type="email" id="email-full" name="email-full" required>
+                        <label for="phone">Phone</label>
+                        <input type="tel" id="phone" name="phone" required>
+                        <label for="message">Message</label>
+                        <input type="text" id="message" name="message" required>
+                        <button type="submit">Submit Now</button>
+                    </form>
                 </div>
+            </section>
+            <section class="map">
+                <div class="container"></div>
             </section>
         </main>
         <footer>
