--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                             <li><a href="#">Home</a></li>
                             <li><a href="pages/about.html">About</a></li>
                             <li><a href="pages/portfolio.html">Portfolio</a></li>
-                            <li><a href="pages/contact.html">Conatct Us</a></li>
+                            <li><a href="pages/contact.html">Contact Us</a></li>
                         </ul>
                     </div>
                     <div class="subscribe-block">
