--- a/pages/about.html
+++ b/pages/about.html
@@ -279,7 +279,7 @@
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="#">About</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="contact.html">Conatct Us</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
                     <div class="subscribe-block">
